fixed image gap and set animation boundaries

--- a/docs/gui.css
+++ b/docs/gui.css
@@ -52,10 +52,10 @@
   z-index: 1;
 }
 
-.guiCarouselCol {
+.guiCarouselCol1 {
   position: relative;
   top: 0;
-  animation: carousel 1000s linear infinite;
+  animation: carousel1 1000s linear infinite;
   width: 100%;
   height: fit-content;
   display: flex;
@@ -65,35 +65,80 @@
   animation-direction: alternate;
 }
 
-.guiCarouselColRev {
+.guiCarouselCol3 {
+  position: relative;
+  top: 0;
+  animation: carousel3 1000s linear infinite;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  animation-direction: alternate;
+}
+
+.guiCarouselColRev2 {
   position: relative;
   width: 100%;
-  bottom: 70%;
+  bottom: 67%;
   height: fit-content;
   display: flex;
   gap: 0;
   justify-content: center;
   align-items: start;
   flex-direction: column-reverse;
-  animation: carouselRev 1000s linear infinite;
+  animation: carouselRev2 700s linear infinite;
   animation-direction: alternate;
 }
 
-@keyframes carousel {
+.guiCarouselColRev4 {
+  position: relative;
+  width: 100%;
+  bottom: 55%;
+  height: fit-content;
+  display: flex;
+  gap: 0;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column-reverse;
+  animation: carouselRev4 700s linear infinite;
+  animation-direction: alternate;
+}
+
+@keyframes carousel1 {
   from {
     transform: translateY(0);
   }
   to {
-    transform: translateY(-80%);
+    transform: translateY(-64%);
   }
 }
 
-@keyframes carouselRev {
+@keyframes carousel3 {
   from {
     transform: translateY(0);
   }
   to {
-    transform: translateY(80%);
+    transform: translateY(-65%);
+  }
+}
+
+@keyframes carouselRev2 {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(65%);
+  }
+}
+
+@keyframes carouselRev4 {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(62%);
   }
 }
 
@@ -105,6 +150,7 @@
 }
 
 .slideImg {
+  display: block;
   width: 100%;
   height: 100%;
   opacity: 80%;
